open modules for tests during release