@@ -44,6 +44,17 @@
                     <target>17</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>--illegal-access=permit</argLine>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
+                    <argLine>-Dillegal-access=permit</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
